test/data/syntax-errors/missing-loop.gs
whiles thief or bless givesUs 0;
GollumGollum;
